--- a/catering.html
+++ b/catering.html
@@ -6,35 +6,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Catering</title>
+    <title>Contact and Catering</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.css" rel="stylesheet">
 
-  <!--Favicon icons -->
-    <!--ios and osx -->
-    <link rel="apple-touch-icon" sizes="57x57" href="img/icons/apple-touch-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="img/icons/apple-touch-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="img/icons/apple-touch-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="img/icons/apple-touch-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="img/icons/apple-touch-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="img/icons/apple-touch-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="img/icons/apple-touch-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="img/icons/apple-touch-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="img/icons/apple-touch-icon-180x180.png">
+   <!--favicons and touch icons-->
+    <!--ios and osx-->
+ 	<link rel="apple-touch-icon" sizes="57x57" href="img/icons/apple-touch-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="img/icons/apple-touch-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="img/icons/apple-touch-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="img/icons/apple-touch-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="img/icons/apple-touch-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="img/icons/apple-touch-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="img/icons/apple-touch-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="img/icons/apple-touch-icon-152x152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="img/icons/apple-touch-icon-180x180.png">
     <!--android-->
     <link rel="icon" type="image/png" href="img/icons/favicon-32x32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="img/icons/favicon-194x194.png" sizes="194x194">
-    <link rel="icon" type="image/png" href="img/icons/favicon-96x96.png" sizes="96x96">
-    <link rel="icon" type="image/png" href="img/icons/android-chrome-192x192.png" sizes="192x192">
-    <link rel="icon" type="image/png" href="img/icons/favicon-16x16.png" sizes="16x16">
-    <!--safari-->
-    <link rel="manifest" href="img/icons/manifest.json">
-    <!-- windows -->
+	<link rel="icon" type="image/png" href="img/icons/android-chrome-192x192.png" sizes="192x192">
+	<link rel="icon" type="image/png" href="img/icons/favicon-96x96.png" sizes="96x96">
+	<link rel="icon" type="image/png" href="img/icons/favicon-16x16.png" sizes="16x16">
+	<link rel="manifest" href="img/icons/manifest.json">
+    <!--safari pin-->
     <link rel="mask-icon" href="img/icons/safari-pinned-tab.svg" color="#5bbad5">
-    <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="msapplication-TileImage" content="/mstile-144x144.png">
-    <meta name="theme-color" content="#ffffff">
+    <!--windows-->
+	<meta name="msapplication-TileColor" content="#da532c">
+	<meta name="msapplication-TileImage" content="img/icons/mstile-144x144.png">
+	<meta name="theme-color" content="#ffffff">
+
 	<!-- Style sheet-->
   	<link href="css/styles-responsive.css" rel="stylesheet">
   	<!--link to web fonts-->
@@ -74,6 +74,7 @@
 
 <!-- End Page Header-->
 <!-- Package collum -->
+
 <div class="container">
     	<div class="row">
     		<!-- about me section -->
@@ -119,7 +120,7 @@
             </div>
   <!-- end package
 <!-- begin Form -->
-
+<div id="catering">
 <div class="container">
   <div class ="whiteBox">
   <p class="formH"> Fill out this catering form and we will get back to you within 2 business days with a quote!</p>
@@ -166,13 +167,18 @@
       <label for="exampleInputemail2"> Any Other Comments </label>
       <input tyoe="text" class="form-control" id="exampleInputemail2" placeholder="add any aditional comments">
     </fieldset>
-    <button class="btn btn-lg btn-submit"> Submit! </button>
+   
   </div>
-
+ 
 </div>
   </form>
+ <div class="container">
+	 <button class="btn-hide"> Submit! </button>
+</div>
 </div>
 
+
+</div>
 </div>
 <!-- have a form for them to fill out asking how many guest and location and there
 name and phone number and then it will say we will email you soon or something-->
@@ -196,7 +202,9 @@ name and phone number and then it will say we will email you soon or something--
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/js.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    
 
 
 </body>
