--- a/index.html
+++ b/index.html
@@ -9,32 +9,55 @@
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.css" rel="stylesheet">
-	<!--Favicon icons -->
-    <!--ios and osx -->
-    <link rel="apple-touch-icon" sizes="57x57" href="img/icons/apple-touch-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="img/icons/apple-touch-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="img/icons/apple-touch-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="img/icons/apple-touch-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="img/icons/apple-touch-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="img/icons/apple-touch-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="img/icons/apple-touch-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="img/icons/apple-touch-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="img/icons/apple-touch-icon-180x180.png">
+
+      <!--favicons and touch icons-->
+    <!--ios and osx-->
+ 	<link rel="apple-touch-icon" sizes="57x57" href="img/icons/apple-touch-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="img/icons/apple-touch-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="img/icons/apple-touch-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="img/icons/apple-touch-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="img/icons/apple-touch-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="img/icons/apple-touch-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="img/icons/apple-touch-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="img/icons/apple-touch-icon-152x152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="img/icons/apple-touch-icon-180x180.png">
     <!--android-->
     <link rel="icon" type="image/png" href="img/icons/favicon-32x32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="img/icons/favicon-194x194.png" sizes="194x194">
-    <link rel="icon" type="image/png" href="img/icons/favicon-96x96.png" sizes="96x96">
-    <link rel="icon" type="image/png" href="img/icons/android-chrome-192x192.png" sizes="192x192">
-    <link rel="icon" type="image/png" href="img/icons/favicon-16x16.png" sizes="16x16">
-    <!--safari-->
-    <link rel="manifest" href="img/icons/manifest.json">
-    <!-- windows -->
+	<link rel="icon" type="image/png" href="img/icons/android-chrome-192x192.png" sizes="192x192">
+	<link rel="icon" type="image/png" href="img/icons/favicon-96x96.png" sizes="96x96">
+	<link rel="icon" type="image/png" href="img/icons/favicon-16x16.png" sizes="16x16">
+	<link rel="manifest" href="img/icons/manifest.json">
+    <!--safari pin-->
     <link rel="mask-icon" href="img/icons/safari-pinned-tab.svg" color="#5bbad5">
-    <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="msapplication-TileImage" content="/mstile-144x144.png">
-    <meta name="theme-color" content="#ffffff">
+    <!--windows-->
+	<meta name="msapplication-TileColor" content="#da532c">
+	<meta name="msapplication-TileImage" content="img/icons/mstile-144x144.png">
+	<meta name="theme-color" content="#ffffff">
 
-	<!--Stylesheet-->
+  <!--favicons and touch icons-->
+    <!--ios and osx-->
+ 	<!--<link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="/apple-touch-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="/apple-touch-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="/apple-touch-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon-152x152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon-180x180.png">-->
+    <!--android-->
+    <!--<link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
+	<link rel="icon" type="image/png" href="/android-chrome-192x192.png" sizes="192x192">
+	<link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
+	<link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
+	<link rel="manifest" href="/manifest.json">-->
+    <!--safari pin-->
+  <!--  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">-->
+    <!--windows-->
+	<!--<meta name="msapplication-TileColor" content="#da532c">
+	<meta name="msapplication-TileImage" content="/mstile-144x144.png">
+	<meta name="theme-color" content="#ffffff">-->
+	<!-- Style sheet-->
   	<link href="css/styles-responsive.css" rel="stylesheet">
   	<!--link to web fonts-->
     <link rel="stylesheet" href="css/fonts/stylesheet.css">
@@ -114,7 +137,7 @@
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
               <div class="whiteBox">
                 <h2 class="colstyeh2">About Us </h2>
-                <p class="colp"> Now that we know who you are, I know who I am. I'm not a mistake! It all makes sense! In a comic, you know how you can tell who the arch-villain's going to be? He's the exact opposite of the hero. And most times they're friends, like you and me! I should've known way back when... You know why, David? Because of the kids. They called me Mr Glass. </p>
+                <p class="colp"> Thank you for visiting <a href="index.html" class="linkgHome">Tomstacos.com</a>. We are a small, family owned restraunt located in torrance california. We have just set up a online order tool. just go to the menu page and place your order. Don't forget to get some Hardshell tacos and the fresh salsa we are known for.   </p>
             </div>
           </div>
             <br>
@@ -125,7 +148,7 @@
             <p class="colp">4669 Torrance Blvd. Torrance, CA 90503</p>
 
             <!-- button -->
-            <button class="btn btn-lg btn-info">Get Directions</button>
+            <button class="btn btn-lg btn-default" id="directions"><a class="linkgHome" href="https://goo.gl/RQFopX">Get Directions</a></button>
           </div>
             </div>
             <br>
