--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Tom's Tacos</title>
 
     <!-- Bootstrap -->
-    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 
       <!--favicons and touch icons-->
     <!--ios and osx-->
@@ -33,30 +33,6 @@
 	<meta name="msapplication-TileColor" content="#da532c">
 	<meta name="msapplication-TileImage" content="img/icons/mstile-144x144.png">
 	<meta name="theme-color" content="#ffffff">
-
-  <!--favicons and touch icons-->
-    <!--ios and osx-->
- 	<!--<link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
-	<link rel="apple-touch-icon" sizes="60x60" href="/apple-touch-icon-60x60.png">
-	<link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-72x72.png">
-	<link rel="apple-touch-icon" sizes="76x76" href="/apple-touch-icon-76x76.png">
-	<link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png">
-	<link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120.png">
-	<link rel="apple-touch-icon" sizes="144x144" href="/apple-touch-icon-144x144.png">
-	<link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon-152x152.png">
-	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon-180x180.png">-->
-    <!--android-->
-    <!--<link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
-	<link rel="icon" type="image/png" href="/android-chrome-192x192.png" sizes="192x192">
-	<link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
-	<link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
-	<link rel="manifest" href="/manifest.json">-->
-    <!--safari pin-->
-  <!--  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">-->
-    <!--windows-->
-	<!--<meta name="msapplication-TileColor" content="#da532c">
-	<meta name="msapplication-TileImage" content="/mstile-144x144.png">
-	<meta name="theme-color" content="#ffffff">-->
 	<!-- Style sheet-->
   	<link href="css/styles-responsive.css" rel="stylesheet">
   	<!--link to web fonts-->
@@ -65,6 +41,10 @@
     <link rel="stylesheet" href="css/normalize.css">
   	<!-- reset --->
     <link rel="stylesheet" href="css/reset.css">
+    <!--font awesome-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <!--footer -->
+
   </head>
   <body>
   <nav class="navbar navbar-inverse">
@@ -137,7 +117,7 @@
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
               <div class="whiteBox">
                 <h2 class="colstyeh2">About Us </h2>
-                <p class="colp"> Thank you for visiting <a href="index.html" class="linkgHome">Tomstacos.com</a>. We are a small, family owned restraunt located in torrance california. We have just set up a online order tool. just go to the menu page and place your order. Don't forget to get some Hardshell tacos and the fresh salsa we are known for.   </p>
+                <p class="colp"> Thank you for visiting <a href="index.html" class="linkgHome">Tomstacos.com</a>. We are a small, family owned restraunt located in Torrance, California. We have just set up a online order tool. Just go to the menu page and place your order. Don't forget to get some hardshell tacos and the fresh salsa. Its what we are known for.   </p>
             </div>
           </div>
             <br>
@@ -183,17 +163,40 @@
     </div>
 </div>
 
-<br>
+
     <!--end of main content-->
     <!--footer content-->
-    <div class="container">
-    <div class="nav navbar-default navbar-bottom">
-    	<div class="container">
-        	<p> Website created by Trevor </p>
 
-    	</div>
-    </div>
-</div>
+    <footer class="footer-distributed">
+
+			<div class="footer-left">
+
+				<p class="footer-links">
+					<a href="index.html">Home</a>
+					·
+					<a href="menu.html">Menu</a>
+					·
+					<a href="catering.html">Catering</a>
+				</p>
+
+				<p class="footer-company-name">Toms Tacos &copy; 2016</p>
+
+			</div>
+
+			<div class="footer-right">
+
+				<form method="get" action="#">
+					<input placeholder="Search our website" name="search" />
+					<i class="fa fa-search"></i>
+				</form>
+
+			</div>
+
+		</footer>
+
+
+
+
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
