--- a/catering.html
+++ b/catering.html
@@ -9,7 +9,7 @@
     <title>Contact and Catering</title>
 
     <!-- Bootstrap -->
-    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 
    <!--favicons and touch icons-->
     <!--ios and osx-->
@@ -41,6 +41,8 @@
     <link rel="stylesheet" href="css/fonts/stylesheet.css">
    	<!-- normanalize -->
     <link rel="stylesheet" href="css/normalize.css">
+    <!--font awesome-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   	<!-- reset --->
     <link rel="stylesheet" href="css/reset.css">
 </head>
@@ -167,9 +169,9 @@
       <label for="exampleInputemail2"> Any Other Comments </label>
       <input tyoe="text" class="form-control" id="exampleInputemail2" placeholder="add any aditional comments">
     </fieldset>
-   
+
   </div>
- 
+
 </div>
   </form>
  <div class="container">
@@ -182,29 +184,39 @@
 </div>
 <!-- have a form for them to fill out asking how many guest and location and there
 name and phone number and then it will say we will email you soon or something-->
+<footer class="footer-distributed">
 
+  <div class="footer-left">
 
+    <p class="footer-links">
+      <a href="index.html">Home</a>
+      ·
+      <a href="menu.html">Menu</a>
+      ·
+      <a href="catering.html">Catering</a>
+    </p>
 
-
-
-
-
-
-
-<div class="container">
-<div class="nav navbar-default navbar-bottom">
-  <div class="container">
-      <p> Website created by Trevor </p>
+    <p class="footer-company-name">Toms Tacos &copy; 2016</p>
 
   </div>
-</div>
-</div>
+
+  <div class="footer-right">
+
+    <form method="get" action="#">
+      <input placeholder="Search our website" name="search" />
+      <i class="fa fa-search"></i>
+    </form>
+
+  </div>
+
+</footer>
+
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/js.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    
+
 
 
 </body>
