--- a/catering.html
+++ b/catering.html
@@ -69,7 +69,7 @@
   </nav>
   <div class="container">
   <div class="page-header">
-    <h1 id="party"> Turn Your party Into a Fiesta! </h1>
+    <h1 id="party"> Turn Your Event Into A Fiesta! </h1>
 
   </div>
 </div>
@@ -84,8 +84,8 @@
               <div class="whiteBox">
                 <h2 class="colstyeh2"> Small Package  </h2>
                 	<ol>
-                    	<li class="colp"> Min Party size 5 people </li>
-                        <li class="colp"> max party size 10 people </li>                    	<li class="colp"> Price $100 </li>
+                    	<li class="colp"> Min party size 5 people </li>
+                        <li class="colp"> Max party size 10 people </li>                    	<li class="colp"> Price $100 </li>
                         </ol>
             </div>
           </div>
@@ -95,8 +95,8 @@
               <div class="whiteBox">
             <h2 class="colstyeh2"> Medium Package </h2>
             		<ol>
-                    	<li class="colp"> Min Party size 10 people </li>
-                        <li class="colp"> max party size 25 people </li>                   		<li class="colp"> Price $150 </li>
+                    	<li class="colp"> Min party size 10 people </li>
+                        <li class="colp"> Max party size 25 people </li>                   		<li class="colp"> Price $150 </li>
                    </ol>
             </div>
             </div>
@@ -107,8 +107,8 @@
               <div class="whiteBox">
               <h2 class="colstyeh2">Large Package</h2>
                 <ol>
-                    <li class="colp"> Min Party size 30 people </li>
-                    <li class="colp"> max party size 50+ people </li>               		<li class="colp"> Price $200 </li>
+                    <li class="colp"> Min party size 30 people </li>
+                    <li class="colp"> Max party size 50+ people </li>               		<li class="colp"> Price $200 </li>
                     </ol>
               </div>
             </div>
